# gemini-mcp-server

./: .gitignore  MANIFEST.in  README.md  config.py  main.py  pyproject.toml  server.py  setup.py
conf/: __init__.py  custom_models.json  task_model_mapping.json
docs/: task_model_mapping.md
providers/: registry.py
tests/: test_claude_continuation.py  test_conversation_memory.py  test_conversation_memory_with_continuation.py  test_live_integration.py  test_tools.py
tools/: base.py  listmodels.py
tools/shared/: base_tool.py
utils/: conversation_memory.py  redka_manager.py  task_model_config.py
